# ShaderEditor

./: .clang-format  .gitignore  CMakeLists.txt  toolchain.cmake
Script/: CompileShaders.bat
Source/: main.cpp
Source/Core/: SeQueueFamilyIndices.h  SeSwapChainSupportDetails.h  SeVulkanManager.cpp  SeVulkanManager.h  SeVulkanWindow.cpp  SeVulkanWindow.h
Source/Util/: SeUtil.cpp  SeUtil.h
